--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,11 @@ notify = "4.0.15"
 chrono = { version = "0.4.11", features = ["serde"] }
 time = "0.1" # TODO: Remove once `iron` is removed
 
+[dependencies.sqlx]
+version = "0.4.0-beta.1"
+default-features = false
+features = [ "runtime-tokio", "macros", "postgres", "json", "chrono" ]
+
 [dependencies.postgres]
 version = "0.17"
 features = ["with-chrono-0_4", "with-serde_json-1"]
