--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ time = "0.1" # TODO: Remove once `iron` is removed
 [dependencies.sqlx]
 version = "0.4.0-beta.1"
 default-features = false
-features = [ "runtime-tokio", "macros", "postgres", "json", "chrono" ]
+features = [ "runtime-tokio", "macros", "postgres", "json", "chrono", "offline" ]
 
 [dependencies.postgres]
 version = "0.17"
